# Carpet-Eater

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  build.bat  build.py  build.spec  make_icon.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: release.yml
carpeteater/: __init__.py  __main__.py  animator.py  audio_fx.py  log.py  naming.py  processor.py  resources.py  window.py
installer/: carpeteater.iss
